--- a/Model/src/main/resources/dataSource.properties
+++ b/Model/src/main/resources/dataSource.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/monitorsensors?createDatabaseIfNotExist=true&serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/monitorsensors?createDatabaseIfNotExist=true&serverTimezone=UTC&characterEncoding=UTF8
 driver=com.mysql.cj.jdbc.Driver
 username=root
 password=root
